# Elgato-Control-Center-API

./: .gitignore  Cargo.toml  README.md  todo-scenes.md
src/: client.rs  devices.rs  main.rs
