[package]
name = "ecc-api"
version = "1.0.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["cargo"] }
futures-io = "0.3.31"
log = "0.4.22"
reqwest = { version = "0.12.8", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.132"
